Credit Card Status Label

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -236,6 +236,12 @@
   /* OTROS */
   /* Estrellas */
   --color-star: var(--primitive-yellow-500);
+  /* Credit Status */
+  --color-new-credit: var(--primitive-blue-900);
+  --color-pending-credit: var(--primitive-yellow-900);
+  --color-review-credit: var(--primitive-yellow-700);
+  --color-approved-credit: var(--primitive-green-900);
+  --color-rejected-credit: var(--primitive-red-900);
 }
 
 @layer utilities {
